--- a/index.html
+++ b/index.html
@@ -5,14 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <nav class="nav">
+      <img src="images/spotify-logo.png" class="spotImg">
+      <ul class="nav-links">
+        <li>
+          <a href="#Premium" class="nav-link">
+            Premium
+          </a>
+        </li>
+        <li>
+          <a href="#Discover" class="nav-link">
+            Discover
+          </a>
+        </li>
+        <li>
+          <a href="#Help" class="nav-link">
+            Help
+          </a>
+        </li>
+        <li>
+          <a href="#Download" class="nav-link">
+            Download
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="paraStart">
+
+       <h1 class="h1Style1">Music for everyone</h1>
+
+      <p class="h1Style">Spotify is now free on mobile, tablet and computer. Listen to the
+        right music, wherever you are.</p>
+    </div>
+    <div>
+      <h1 class="title">What’s on Spotify?</h1>
+    </div>
+    <section class="cards">
+      <div class="box">
+        <img src="images/music-icon.png" class="icon">
+        <h2>Millions of Songs </h2>
+        <p>Millions of Songs There are millions of songs on Spotify</p>
+      </div>
+      <div class="box">
+        <img src="images/high-quality-icon.png" class="icon">
+        <h2>HD Music</h2>
+        <p>Listen to music as if you were listening live</p>
+      </div>
+      <div class="box">
+        <img src="images/devices-icon.png" class="icon">
+        <h2>Stream Everywhere</h2>
+        <p> Stream music on your smartphone, tablet or computer</p>
+      </div>
+    </section>
+    <section class="footerAjusent">
+      <div class="footerContainer">
+
+        <div>
+          <h1>It’s as yeezy as Kanye West.</h1>
+          <div>
+            <h2>Search</h2>
+            <p>Know what you want to listen to? Just search and hit play.</p>
+          </div>
+          <div>
+            <h2>Browse</h2>
+            <p>Check out the
+              latest charts, brand new releases and great playlists for right now.</p>
+          </div>
+          <div>
+            <h2>Discover</h2>
+            <p>Enjoy new music every Monday with your
+              own personal playlist. Or sit back and enjoy Radio.</p>
+          </div>
+        </div>
+        <img src="images/spotify-app.jpg" class="spotAppImg">
+
+      </div>
+    </section>
   </body>
 </html>
